@@ -1,3 +1,8 @@
+2018-04-25 Philipp Klaus Krause <pkk AT spth.de>
+
+	* device/include/stdbool.h:
+	  Change the type of true and false to _Bool (see also N 2229).
+
 2018-04-23 Philipp Klaus Krause <pkk AT spth.de>
 
 	* doc/sdccman.lyx:
